--- a/app/src/main/res/layout/item_layout_favorite.xml
+++ b/app/src/main/res/layout/item_layout_favorite.xml
@@ -3,6 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+
+        <variable
+            name="heroFavorite"
+            type="com.sun.hero_02.screen.favorite.adapter.ItemFavoriteViewModel" />
+    </data>
+
     <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -30,6 +37,7 @@
                     android:layout_height="match_parent"
                     android:layout_alignParentTop="true"
                     android:layout_centerHorizontal="true"
+                    app:imageUrl="@{heroFavorite.favorite.urlImage}"
                     android:src="@drawable/ic_launcher_foreground" />
             </com.google.android.material.card.MaterialCardView>
 
@@ -59,6 +67,7 @@
                 android:gravity="center"
                 android:textSize="@dimen/_20ssp"
                 android:textColor="@color/color_C29E52"
+                android:text="@{heroFavorite.favorite.name}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"/>
