--- a/app/src/main/res/layout/item_hero.xml
+++ b/app/src/main/res/layout/item_hero.xml
@@ -17,6 +17,7 @@
         app:cardUseCompatPadding="true">
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/itemHeroContainer"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:padding="@dimen/_15sdp">
